--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^10.16.4",
     "i18next": "^25.6.2",
     "lucide-react": "^0.294.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
